add client and loan corrections, issues with html