@@ -9,6 +9,7 @@ import org.springframework.context.annotation.Bean;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 
 import static com.mindhub.homebanking.models.TransactionType.CREDIT;
@@ -23,7 +24,7 @@ public class HomebankingApplication {
 	}
 
 	@Bean
-	public CommandLineRunner initData(ClientRepository clientRepository, AccountRepository accountRepository, TransactionRepository transactionRepository, LoanRepository loanRepository) {
+	public CommandLineRunner initData(ClientRepository clientRepository, AccountRepository accountRepository, TransactionRepository transactionRepository, LoanRepository loanRepository, ClientLoanRepository clientLoanRepository) {
 		return (args) -> {
 
 			Client client1 = new Client("Melba", "Morel", "melba@mindhub.com");
@@ -54,12 +55,29 @@ public class HomebankingApplication {
 			transactionRepository.save(transaction2);
 			transactionRepository.save(transaction3);
 
-			Loan loan1 = new Loan("Mortgage", 500000.0, List.of(12, 24, 36, 48, 60));
-			Loan loan2 = new Loan("Personal", 100000.0, List.of(6,12,24));
-			Loan loan3 = new Loan("Automotive", 300000.0, List.of(6,12,24,36));
+			Loan loan1 = new Loan("Mortgage", 500000.0, Arrays.asList(12, 24, 36, 48, 60));
+			Loan loan2 = new Loan("Personal", 100000.0, Arrays.asList(6,12,24));
+			Loan loan3 = new Loan("Automotive", 300000.0, Arrays.asList(6,12,24,36));
 			loanRepository.save(loan1);
 			loanRepository.save(loan2);
 			loanRepository.save(loan3);
+
+			ClientLoan clientLoan1 = new ClientLoan(400000.0, 60);
+			ClientLoan clientLoan2 = new ClientLoan(50000.0, 12);
+			client1.addClientLoan(clientLoan1);
+			loan1.addClientLoan(clientLoan1);
+			client1.addClientLoan(clientLoan2);
+			loan2.addClientLoan(clientLoan2);
+			clientLoanRepository.save(clientLoan1);
+			clientLoanRepository.save(clientLoan2);
+			ClientLoan clientLoan3 = new ClientLoan(100000.0, 24);
+			ClientLoan clientLoan4 = new ClientLoan(200000.0, 36);
+			client2.addClientLoan(clientLoan3);
+			loan2.addClientLoan(clientLoan3);
+			client2.addClientLoan(clientLoan4);
+			loan3.addClientLoan(clientLoan4);
+			clientLoanRepository.save(clientLoan3);
+			clientLoanRepository.save(clientLoan4);
 		};
 	}
 }
